plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group = 'org.ltae'
version = '$projectVersion'

repositories {
    //国内源
    maven { url 'https://maven.aliyun.com/repository/public' }
    maven { url 'https://maven.aliyun.com/repository/spring' }
    maven { url 'https://maven.aliyun.com/repository/spring-plugin' }
    maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
    //github项目
    maven { url 'https://jitpack.io' }
    mavenCentral()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:unchecked']
}
dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    //libgdx
    implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
    //box2d及光线
    implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
    implementation "com.badlogicgames.box2dlights:box2dlights:$box2dLightsVersion"
    //ECS及插件
    implementation "net.onedaybeard.artemis:artemis-odb:$artemisOdbVersion"
    implementation "net.onedaybeard.artemis:artemis-odb-serializer:$artemisOdbVersion"
    implementation "net.onedaybeard.artemis:artemis-odb-serializer-json-libgdx:$artemisOdbVersion"
    implementation "net.mostlyoriginal.artemis-odb:contrib-core:$contribVersion"
    implementation "net.mostlyoriginal.artemis-odb:contrib-eventbus:$contribVersion"
    implementation "net.mostlyoriginal.artemis-odb:contrib-plugin-singleton:$contribVersion"
    implementation "net.mostlyoriginal.artemis-odb:contrib-plugin-profiler:$contribVersion"

    //地图形状转物理形状
    implementation "com.github.lyze237:gdx-projecttriangleplatforming:$ptpVersion"
    implementation "com.github.lyze237:gdx-Clipper2:$clipperVersion"
    //类反射工具
    implementation "org.reflections:reflections:$reflectionsVersion"
    //ai
    implementation "com.badlogicgames.gdx:gdx-ai:$aiVersion"
    //ink剧本编辑器
    implementation "com.bladecoder.ink:blade-ink:$bladeInkVersion"
}

test {
    useJUnitPlatform()
}